# phanloaivithuoc-be

./: README.md  pyproject.toml
app/: main.py
app/core/: database.py
app/routes/: router.py  webrtc_routes.py
app/services/: model.py  plc_service.py  yolo_service.py
